[package]
name = "tauri-libappindicator-sys"
version = "0.1.1"
description = "Rust sys bindings for libappindicator"
license = "MIT"
readme = "README.md"
keywords = ["linux", "gui"]
build = "build.rs"
edition = "2018"
categories = ["external-ffi-bindings"]

[lib]
name = "libappindicator_sys"

[dependencies]
gtk-sys = "^0.14.0"

[build-dependencies]
pkg-config = "0.3.19"

